Fix 100vh on ios take 2

--- a/src/css/global/_reset.css
+++ b/src/css/global/_reset.css
@@ -35,9 +35,14 @@ html:focus-within {
 /* Set core body defaults */
 body {
   min-height: 100vh;
-  min-height: -webkit-fill-available;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
+}
+
+@supports (-webkit-touch-callout: none) {
+  body {
+    min-height: -webkit-fill-available;
+  }
 }
 
 /* A elements that don't have a class get default styles */
